# Nav_MPC

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: mpc_config.yaml  uav_config.yaml
config/scenarios/: corridor.yaml  dynamic_obstacles.yaml  single_sphere.yaml
examples/: __init__.py  _fix_matplotlib.py  basic_hover.py  dynamic_avoidance.py  static_avoidance.py  swarm_avoidance.py  urban_rescue.py  waypoint_tracking.py
src/: __init__.py
src/dynamics/: __init__.py  integrators.py  point_mass_model.py  uav_state.py
src/mpc/: __init__.py  constraints.py  controller.py  cost_functions.py  solver_interface.py
src/obstacles/: __init__.py  base.py  collision.py  dynamic.py  static.py
src/planning/: __init__.py  reference.py  waypoints.py
src/utils/: __init__.py  config_loader.py  logging_utils.py  transforms.py
src/visualization/: __init__.py  animation.py  plotter_3d.py
tests/: __init__.py  test_dynamics.py  test_mpc.py  test_obstacles.py  test_scenarios.py
