[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpc-uav-planner"
version = "0.1.0"
description = "MPC-based UAV path planning with obstacle avoidance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Youness El Mrhasli", email = "youness.elmrhasli@gmail.com"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "casadi>=3.6",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
